# SOCBench

./: README.md
socbench-d/code/: .gitignore  LICENSE  README.md  pyproject.toml
socbench-d/code/src/: evaluate.py  stats.py
socbench-d/code/src/analysis/: cross-domain-average.ipynb  domain-similarity.ipynb  graphs.ipynb
socbench-d/code/src/benchmark/: __init__.py  agent.py  benchmark.py  encoding.py  llama_index.py
socbench-d/code/src/benchmark/restbench/: __init__.py  restbench.py
socbench-d/code/src/benchmark/restbench/data/datasets/: spotify.json  tmdb.json
socbench-d/code/src/benchmark/socbenchd/: __init__.py  benchmark.py  create_benchmark.py  domains.json  endpoints-template.txt  open-api-check-template.txt  open-api-template.txt  query-check-further-endpoints-template.txt  query-check-necessary-template.txt  query-template.txt  services-template.txt
socbench-d/code/src/benchmark/socbenchd/benchmark/11-real estate/: services.json
socbench-d/code/src/benchmark/socbenchd/socbenchd_1/01-energy/: queries.json  services.json
socbench-d/code/src/benchmark/socbenchd/socbenchd_1/02-materials/: queries.json  services.json
socbench-d/code/src/benchmark/socbenchd/socbenchd_1/03-industrials/: queries.json  services.json
socbench-d/code/src/benchmark/socbenchd/socbenchd_1/04-consumer discretionary/: services.json
socbench-d/code/src/socrag/: agent.py  craft.py  endpointmetadataparser.py  endpointparser.py  file.py  index.py  llmparser.py
socbench-d/code/tests/benchmark/socbenchd/: test_create_benchmark.py
(+1833 files in other folders)
